--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "currency.js": "^2.0.4",
     "filestack-js": "^3.26.0",
     "moment": "^2.29.4",
-    "sweetalert": "^2.1.2",
     "pinia": "^2.0.32",
+    "sweetalert": "^2.1.2",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "sass": "^1.62.0",
     "vite": "^4.1.4"
   }
 }
