--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.4",
     "pinia": "^2.0.32",
     "sweetalert": "^2.1.2",
+    "awesome-notifications": "^3.1.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
