--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 NODE_ENV=production
 VITE_BE_API="https://rramo.alwaysdata.net/evergreen"
-VITE_BASE_URL="https://www.pickshaven.com"
+VITE_BASE_URL="https://www.evergreenpicks.com"
