added unique chat

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_APP_NAME="Evergreen Picks"
 VITE_FSHARE_KEY= "A4tNJ3KvQ2yEDnN5qMjYez"
-VITE_TIDO_KEY="oje9p3zweqxnqqcawyqj6y0krt7adfbb"
+VITE_TIDIO_KEY="tujy4hy9oovpdffkkstidx1csppmmmlk"
